# zoracle

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  prj.conf
app/boards/: nucleo_f302r8.overlay  teensy41.overlay
app/src/: hid_msg.c  hid_write.c  main.c  main.cpp  main.h  mpu9250.c  usb_hid_logger.c
boards/arm/custom_plank/: README.md
lib/: CMakeLists.txt
scripts/: example_west_command.py
zephyr/: module.yml
